Fix right bar covering click areas

--- a/static/src/scss/screen.scss
+++ b/static/src/scss/screen.scss
@@ -117,7 +117,7 @@ a.nolink { border: 0; }
 }
 
 .right {
-    position: absolute; right: 0; left: 0; top: 0;
+    position: absolute; right: 0; top: 0;
     text-align: right;  padding: 0.5em;
 
     .edit {
